--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
-* 1.0.0 - 30/08/2017
+* 1.0.1 - 30/08/2017
+====================
+- Fixed: JS error on load more items
+
+
+* 1.0.0 - 28/08/2017
 ====================
 - Released
