--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+* 1.0.5 - 23/03/2018
+====================
+- Added: Telegram and Email icons to social menu
+
+
 * 1.0.4 - 26/01/2018
 ====================
 - Improved: Color for contact button and portfolio categories
